<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonHiraganaDrill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hiragana_drill_button"
        android:onClick="onClickButtonHiraganaDrill" />

    <Button
        android:id="@+id/buttonKatakanaDrill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/katakan_drill_button"
        android:onClick="onClickButtonKatakanaDrill" />

    <Button
        android:id="@+id/buttonHiraganaTraining"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hiragana_train_button"
        android:onClick="onClickButtonHiraganaTraining" />

    <Button
        android:id="@+id/buttonKatakanaTraining"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/katakana_train_button"
        android:onClick="onClickButtonKatakanaTraining" />

    <Button
        android:id="@+id/buttonKanjiDrillEnglish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kanji_drill_english_button"
        android:onClick="onClickButtonKanjiDrillEnglish" />

    <Button
        android:id="@+id/buttonKanjiDrillJapanese"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kanji_drill_japanese_button"
        android:onClick="onClickButtonKanjiDrillJapanese" />

    <Button
        android:id="@+id/buttonKanjiTraining"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kanji_training_button"
        android:onClick="onClickButtonKanjiTraining" />
    
</LinearLayout>
